# School-system

./: README.md  pyproject.toml  requirements.txt
school/: admin.py  views.py
school/migrations/: 0001_initial.py
templates/school/: aboutus.html  admin_add_student.html  admin_add_teacher.html  admin_approve_student.html  admin_approve_teacher.html  admin_attendance.html  admin_dashboard.html  admin_dashboard_cards.html  admin_fee.html  admin_notice.html  admin_student.html  admin_take_attendance.html  admin_teacher.html  admin_teacher_student_card.html  admin_update_student.html  admin_update_teacher.html  admin_view_attendance_ask_date.html  admin_view_attendance_page.html  admin_view_fee.html  admin_view_student.html  admin_view_student_fee.html  admin_view_teacher.html  admin_view_teacher_salary.html  adminbase.html  adminclick.html  adminlogin.html  adminsignup.html  contactus.html  contactussuccess.html  footer.html  homebase.html  student_dashboard.html  student_view_attendance_ask_date.html  student_wait_for_approval.html  studentbase.html  studentlogin.html  studentsignup.html  teacher_dashboard.html  teacher_notice.html  teacher_take_attendance.html  (+6 more)
